--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,5 @@ venv
 *.log
 
 # CSV files
-./csv/River_Levels_and_Flows.csv
-./csv/River_Level_and_Flow_Monitoring_Stations.csv
+/csv/River_Levels_and_Flows.csv
+/csv/River_Level_and_Flow_Monitoring_Stations.csv
